ERROR: pagina en blanco

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -25,8 +26,8 @@
 
     <footer class="container">
         <hr>
-        <p>&copy; © 2025 Proyecto Simulador Criptomonedas.</p>
+        <p>&copy; 2025 Proyecto Simulador Criptomonedas.</p>
     </footer>
 
-    </body>
-    </html>
+</body>
+</html>
